# gsolve

./: .gitignore  Cargo.toml  README.md
src/: constraints.rs  figure.rs  lib.rs  math.rs  order.rs  solve.rs  util.rs
src/math/: geo.rs  number.rs  quantity.rs  vector.rs
