[package]
name = "gsolve"
version = "0.1.0"
authors = ["GroveDG"]
description = "A geometry-based geometric constraint solver"
repository = "https://github.com/GroveDG/gsolve"
edition = "2024"

[dependencies]
indexmap = "2.8.0"
itertools = "0.14.0"
petgraph = { version = "0.7.1", default-features = false }
